Week Days bug fix. Navigation links alignment.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -302,7 +302,7 @@ $nav_username_text: #fff;
 		}
 	}
 
-	@media only screen and (max-width: 1275px) {
+	@media only screen and (max-width: 1342px) {
 		// Logo
 		.statis_logo {
 			width: 100%;
@@ -326,7 +326,7 @@ $nav_username_text: #fff;
 	}
 
 	.links_holder {
-		margin-top: 8px;
+		margin-top: 9px;
 	}
 
 	a {
